<resources>
    <string name="app_name">StudentHandbook</string>
    <string name="dashboard">Dashboard</string>
    <string name="search">Search</string>
    <string name="nav_bookmark">Bookmark</string>
    <string name="nav_map">Map</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>

    <!-- Splash Screen Strings -->
    <string name="app_title_splash">BulSU Bustos</string>
    <string name="app_subtitle_splash">E-Handbook</string>
    <string name="loading_handbook">Loading your handbook…</string>
    <string name="splash_footer">Your comprehensive guide to university life.</string>
    <string name="splash_background">Splash screen background</string>
    <string name="bulsu_logo">BulSU Logo</string>


    <!-- Scheduler -->
    <string-array name="days_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>


</resources>